# GoProMoto

./: CMakeLists.txt  README.md  compute_laps.cpp  compute_laps.h  extract_GPMF.cpp  extract_GPMF.h  images.cpp  images.h  lean_functions.cpp  lean_functions.hpp  main.cpp  merge_audio.cpp  merge_audio.h  merge_audio_video.cpp  merge_audio_video.h  overlay_functions.cpp  overlay_functions.h  overlay_functions_cairo.cpp  overlay_functions_cairo.hpp  structures.h  test_lean.cpp
GPMF/: GPMF_mp4reader.c  GPMF_mp4reader.h  GPMF_parser.c  GPMF_parser.h
overlay_gps/: main.cpp  single_digit.h
tracks/: tracks.csv
